Версия 1.90.35 из архива ghemical-1.90.35.rar от 05.04.2007
git-svn-id: file:///E/_SVN/ghemical-1.90.32_repository@4 8ebba67a-7d6b-164d-8379-c1d166cbd162

--- a/src/win_project/win_project.vcproj
+++ b/src/win_project/win_project.vcproj
@@ -162,6 +162,9 @@
 				Name="glade"
 				Filter="">
 				<File
+					RelativePath="..\glade\geomopt_dialog.cpp">
+				</File>
+				<File
 					RelativePath="..\glade\moldyn_atomlist_dialog.cpp">
 				</File>
 				<File
