--- a/consol/ghemical.rc
+++ b/consol/ghemical.rc
@@ -156,8 +156,8 @@ BEGIN
     CONTROL         "N Steps",IDC_CHECK_NSTEPS,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,7,49,41,10
     GROUPBOX        "Box Optimization",IDC_STATIC,7,64,73,68
-    CONTROL         "No",IDC_RADIO_BOX_OPT_NO,"Button",BS_AUTORADIOBUTTON | 
-                    WS_GROUP,14,76,25,10
+    CONTROL         "No",IDC_RADIO_BOX_OPT_NO,"Button",BS_AUTORADIOBUTTON,14,
+                    76,25,10
     CONTROL         "XYZ",IDC_RADIO_BOX_OPT_XYZ,"Button",BS_AUTORADIOBUTTON,
                     14,89,40,10
     CONTROL         "XY",IDC_RADIO_BOX_OPT_XY,"Button",BS_AUTORADIOBUTTON,14,
