--- a/consol/ghemical.rc
+++ b/consol/ghemical.rc
@@ -138,14 +138,14 @@ BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,73,126,50,14
 END
 
-IDD_DIALOG_GEOMOPT DIALOGEX 0, 0, 192, 139
+IDD_DIALOG_GEOMOPT DIALOGEX 0, 0, 260, 139
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | 
     WS_SYSMENU
 CAPTION "Geometry Optimization"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,135,7,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,135,24,50,14
+    DEFPUSHBUTTON   "OK",IDOK,203,7,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,203,24,50,14
     EDITTEXT        IDC_EDIT_DELTA_E,54,12,62,14,ES_AUTOHSCROLL
     CONTROL         "Delta E",IDC_CHECK_DELTA_E,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,7,12,39,10
@@ -155,15 +155,17 @@ BEGIN
     EDITTEXT        IDC_EDIT_NSTEPS,54,49,62,14,ES_AUTOHSCROLL
     CONTROL         "N Steps",IDC_CHECK_NSTEPS,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,7,49,41,10
-    GROUPBOX        "Box Optimization",IDC_STATIC,7,64,73,68
-    CONTROL         "No",IDC_RADIO_BOX_OPT_NO,"Button",BS_AUTORADIOBUTTON,14,
-                    76,25,10
-    CONTROL         "XYZ",IDC_RADIO_BOX_OPT_XYZ,"Button",BS_AUTORADIOBUTTON,
-                    14,89,40,10
-    CONTROL         "XY",IDC_RADIO_BOX_OPT_XY,"Button",BS_AUTORADIOBUTTON,14,
-                    102,24,10
-    CONTROL         "Z",IDC_RADIO_BOX_OPT_Z,"Button",BS_AUTORADIOBUTTON,14,
-                    115,20,10
+    GROUPBOX        "Box Optimization",IDC_STATIC,7,64,64,68
+    CONTROL         "No",IDC_RADIO_BOX_OPT_NO,"Button",BS_AUTORADIOBUTTON | 
+                    BS_PUSHLIKE | WS_GROUP,14,76,40,10
+    CONTROL         "XYZ",IDC_RADIO_BOX_OPT_XYZ,"Button",BS_AUTORADIOBUTTON | 
+                    BS_PUSHLIKE,14,89,40,10
+    CONTROL         "XY",IDC_RADIO_BOX_OPT_XY,"Button",BS_AUTORADIOBUTTON | 
+                    BS_PUSHLIKE,14,102,40,10
+    CONTROL         "Z",IDC_RADIO_BOX_OPT_Z,"Button",BS_AUTORADIOBUTTON | 
+                    BS_PUSHLIKE,14,115,40,10
+    EDITTEXT        IDC_EDIT_DELTA_E_MIN_NSTEPS,157,12,35,14,ES_AUTOHSCROLL
+    LTEXT           "Min NSteps",IDC_STATIC,118,12,36,8
 END
 
 
@@ -236,7 +238,7 @@ BEGIN
     IDD_DIALOG_GEOMOPT, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 185
+        RIGHTMARGIN, 253
         VERTGUIDE, 14
         VERTGUIDE, 54
         TOPMARGIN, 7
