--- a/libghemical/src/simple_test/example4/example4.vcproj
+++ b/libghemical/src/simple_test/example4/example4.vcproj
@@ -127,6 +127,9 @@
 				RelativePath="..\..\..\..\consol\filedlg.cpp">
 			</File>
 			<File
+				RelativePath="..\..\..\..\src\glade\geomopt_dialog.cpp">
+			</File>
+			<File
 				RelativePath="..\..\..\..\consol\ghemical.rc">
 			</File>
 			<File
