Версия 1.90.38 из архива ghemical-1.90.38.rar от 29.09.2007
git-svn-id: file:///E/_SVN/ghemical-1.90.32_repository@7 8ebba67a-7d6b-164d-8379-c1d166cbd162

--- a/libghemical/src/simple_test/example4/example4.vcproj
+++ b/libghemical/src/simple_test/example4/example4.vcproj
@@ -83,7 +83,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="babel.lib win_project.lib libghemical.lib comctl32.lib"
-				OutputFile="$(OutDir)/../../../../../../example.exe"
+				OutputFile="$(OutDir)/../../../../../../example300_033.exe"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="../../../../"
 				GenerateDebugInformation="TRUE"
