Версия 1.90.39 из архива ghemical-1.90.39.rar от 23.12.2009
git-svn-id: file:///E/_SVN/ghemical-1.90.32_repository@8 8ebba67a-7d6b-164d-8379-c1d166cbd162

--- a/src/win_project/win_project.vcproj
+++ b/src/win_project/win_project.vcproj
@@ -105,6 +105,9 @@
 				RelativePath="..\camera.cpp">
 			</File>
 			<File
+				RelativePath="..\director.cpp">
+			</File>
+			<File
 				RelativePath="..\filetrans.cpp">
 			</File>
 			<File
@@ -193,6 +196,9 @@
 			</File>
 			<File
 				RelativePath="..\color.h">
+			</File>
+			<File
+				RelativePath="..\director.h">
 			</File>
 			<File
 				RelativePath="..\filetrans.h">
