Версия 1.90.40 из архива ghemical-1.90.40.rar от 10.01.2010
git-svn-id: file:///E/_SVN/ghemical-1.90.32_repository@9 8ebba67a-7d6b-164d-8379-c1d166cbd162

--- a/consol/ghemical.rc
+++ b/consol/ghemical.rc
@@ -104,6 +104,10 @@ BEGIN
     EDITTEXT        IDC_EDIT_GRAVI_GY,127,85,40,14,ES_AUTOHSCROLL
     LTEXT           "Gz",IDC_STATIC,111,106,10,8
     EDITTEXT        IDC_EDIT_GRAVI_GZ,127,103,40,14,ES_AUTOHSCROLL
+    CONTROL         "Recalc box",IDC_CHECK_CALC_MIN_MAX_COORDINATES_2,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,48,166,52,10
+    CONTROL         "Check2",IDC_CHECK_BOX_OPTIMIZATION_2,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,117,140,41,10
 END
 
 IDD_DIALOG_ATOMLIST_MOLDYN DIALOG  0, 0, 317, 126
@@ -115,14 +119,14 @@ BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,260,24,50,14
 END
 
-IDD_DIALOG_SETUP DIALOGEX 0, 0, 186, 90
+IDD_DIALOG_SETUP DIALOGEX 0, 0, 289, 102
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | 
     WS_SYSMENU
 CAPTION "Setup"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,129,7,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,129,24,50,14
+    DEFPUSHBUTTON   "OK",IDOK,232,7,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,232,24,50,14
 END
 
 IDD_DIALOG_ELEMENT DIALOGEX 0, 0, 401, 155
@@ -162,7 +166,7 @@ BEGIN
     EDITTEXT        IDC_EDIT_NSTEPS,54,49,62,14,ES_AUTOHSCROLL
     CONTROL         "N Steps",IDC_CHECK_NSTEPS,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,7,49,41,10
-    GROUPBOX        "Box Optimization",IDC_STATIC,7,64,64,68
+    GROUPBOX        "Box Optimization",IDC_STATIC,7,64,132,68
     CONTROL         "No",IDC_RADIO_BOX_OPT_NO,"Button",BS_AUTORADIOBUTTON | 
                     BS_PUSHLIKE | WS_GROUP,14,76,40,10
     CONTROL         "XYZ",IDC_RADIO_BOX_OPT_XYZ,"Button",BS_AUTORADIOBUTTON | 
@@ -173,6 +177,60 @@ BEGIN
                     BS_PUSHLIKE,14,115,40,10
     EDITTEXT        IDC_EDIT_DELTA_E_MIN_NSTEPS,157,12,35,14,ES_AUTOHSCROLL
     LTEXT           "Min NSteps",IDC_STATIC,118,12,36,8
+    CONTROL         "Recalc box",IDC_CHECK_CALC_MIN_MAX_COORDINATES,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,63,88,51,10
+    CONTROL         "Box Optimization",IDC_CHECK_BOX_OPTIMIZATION,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,63,75,69,10
+END
+
+IDD_DIALOG_SETUP1_QM DIALOGEX 0, 0, 186, 90
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | 
+    WS_SYSMENU
+CAPTION "Dialog"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    DEFPUSHBUTTON   "OK",IDOK,129,7,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,129,24,50,14
+END
+
+IDD_DIALOG_SETUP1_MM DIALOGEX 0, 0, 186, 90
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | 
+    WS_SYSMENU
+CAPTION "Dialog"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    DEFPUSHBUTTON   "OK",IDOK,129,7,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,129,24,50,14
+END
+
+IDD_DIALOG_SETUP1_SF DIALOGEX 0, 0, 186, 90
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | 
+    WS_SYSMENU
+CAPTION "Dialog"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    DEFPUSHBUTTON   "OK",IDOK,129,7,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,129,24,50,14
+END
+
+IDD_DIALOG_SETUP2_QM_MM DIALOGEX 0, 0, 186, 90
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | 
+    WS_SYSMENU
+CAPTION "Dialog"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    DEFPUSHBUTTON   "OK",IDOK,129,7,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,129,24,50,14
+END
+
+IDD_DIALOG_SETUP2_MM_SF DIALOGEX 0, 0, 186, 90
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | 
+    WS_SYSMENU
+CAPTION "Dialog"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    DEFPUSHBUTTON   "OK",IDOK,129,7,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,129,24,50,14
 END
 
 
@@ -221,9 +279,9 @@ BEGIN
     IDD_DIALOG_SETUP, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 179
+        RIGHTMARGIN, 282
         TOPMARGIN, 7
-        BOTTOMMARGIN, 83
+        BOTTOMMARGIN, 95
     END
 
     IDD_DIALOG_ELEMENT, DIALOG
@@ -254,6 +312,46 @@ BEGIN
         HORZGUIDE, 31
         HORZGUIDE, 49
         HORZGUIDE, 64
+    END
+
+    IDD_DIALOG_SETUP1_QM, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 179
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 83
+    END
+
+    IDD_DIALOG_SETUP1_MM, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 179
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 83
+    END
+
+    IDD_DIALOG_SETUP1_SF, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 179
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 83
+    END
+
+    IDD_DIALOG_SETUP2_QM_MM, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 179
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 83
+    END
+
+    IDD_DIALOG_SETUP2_MM_SF, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 179
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 83
     END
 END
 #endif    // APSTUDIO_INVOKED
@@ -377,6 +475,8 @@ BEGIN
         MENUITEM SEPARATOR
         MENUITEM "Solvate Box",                 ID_BUILD_SOLVATEBOX
         MENUITEM "Solvate Sphere",              ID_BUILD_SOLVATESPHERE
+        MENUITEM SEPARATOR
+        MENUITEM "Nematic Box",                 ID_BUILD_NEMATICBOX
         MENUITEM SEPARATOR
         MENUITEM "Amino",                       ID_BUILD_AMINO
         MENUITEM "Nucleic",                     ID_BUILD_NUCLEIC
@@ -504,6 +604,7 @@ BEGIN
             MENUITEM "Unset Under Gravi",           ID_SELECTEDATOMS_UNSETUNDERGRAVI
 
         END
+        MENUITEM "Select Locked Atoms",         ID_SELECT_SELECTLOCKEDATOMS
     END
     POPUP "&Help"
     BEGIN
