--- a/consol/ghemical.vcproj
+++ b/consol/ghemical.vcproj
@@ -106,7 +106,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="odbc32.lib odbccp32.lib comctl32.lib"
-				OutputFile="../../ghemical_.exe"
+				OutputFile="../../ghemical_release_4.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
 				ProgramDatabaseFile=".\Release/ghemical2.pdb"
