Добавлен класс moldyn_tst
git-svn-id: file:///E/_SVN/ghemical-1.90.32_repository@12 8ebba67a-7d6b-164d-8379-c1d166cbd162

--- a/consol/ghemical.vcproj
+++ b/consol/ghemical.vcproj
@@ -170,6 +170,9 @@
 				RelativePath=".\resource.h">
 			</File>
 			<File
+				RelativePath=".\resource.hm">
+			</File>
+			<File
 				RelativePath=".\StdAfx.h">
 			</File>
 			<File
